# Extera-V2T-Server

./: .dockerignore  .env.example  .gitignore  API.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml
api/: Cargo.toml
api/src/: main.rs
shared/src/: lib.rs
worker/: Cargo.toml
worker/src/: main.rs
