[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
shared = { path = "../shared" }
axum = { version = "0.8.9", features = ["multipart"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.52.1", features = ["rt", "rt-multi-thread", "macros", "fs", "io-util"] }
tower-http = { version = "0.6.8", features = ["cors", "trace"] }
tracing-subscriber = "0.3.23"
tracing = "0.1.44"
amqprs = "2.1.5"
uuid = { version = "1.23.1", features = ["v4"] }
chrono = "0.4.44"
