[package]
name = "worker"
version = "0.1.0"
edition = "2024"

[dependencies]
shared = { path = "../shared" }
amqprs = "2.1.5"
tokio = { version = "1.52.1", features = ["rt", "rt-multi-thread", "macros", "fs", "time", "signal", "process"] }
tracing-subscriber = "0.3.23"
tracing = "0.1.44"
serde_json = "1.0.149"
async-trait = "0.1"
